--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             const chapters = [
                 {
                     id: 'ch1',
-                    title: '選擇權邏輯入門',
+                    title: 'CHAPTER 1 選擇權入門',
                     icon: <Icons.Book />,
                     testUrl: 'chap1-test.html',
                     subpages: [
@@ -110,7 +110,7 @@
                 },
                 {
                     id: 'ch2',
-                    title: '核心名詞大解析',
+                    title: 'CHAPTER 2 基礎知識',
                     icon: <Icons.Target />,
                     testUrl: 'chap2-test.html',
                     subpages: [
@@ -121,7 +121,7 @@
                 },
                 {
                     id: 'ch3',
-                    title: '權利金的秘密',
+                    title: 'CHAPTER 3 權利金的秘密',
                     icon: <Icons.Zap />,
                     testUrl: 'chap3-test.html',
                     subpages: [
@@ -131,7 +131,7 @@
                 },
                 {
                     id: 'ch4',
-                    title: '希臘字母實戰力',
+                    title: 'CHAPTER 4 希臘字母實戰力',
                     icon: <Icons.TrendingUp />,
                     testUrl: 'chap4-test.html',
                     subpages: [
@@ -143,7 +143,7 @@
                 },
                 {
                     id: 'ch5',
-                    title: '選擇權的九九乘法表',
+                    title: 'CHAPTER 5 選擇權的九九乘法表',
                     icon: <Icons.Zap />,
                     testUrl: 'chap5-merged-test.html',
                     subpages: [
@@ -161,7 +161,7 @@
                 },
                 {
                     id: 'ch6',
-                    title: '風控與交易系統',
+                    title: 'CHAPTER 6 常見問題集',
                     icon: <Icons.Shield />,
                     testUrl: 'chap6-test.html',
                     subpages: [
@@ -187,12 +187,12 @@
                     <aside className={`fixed inset-y-0 left-0 z-50 w-[280px] lg:w-[320px] bg-[#fffcf5] border-r-2 border-[#e7e5e4] transform transition-transform duration-300 ease-in-out ${isMenuOpen ? 'translate-x-0' : '-translate-x-full'} md:relative md:translate-x-0 md:sticky md:top-0 md:h-screen overflow-y-auto`}>
                         <div className="flex flex-col h-full">
                             <div className="p-8 pb-10 flex items-center gap-4 cursor-pointer group" onClick={() => {setActiveChapterId('home'); setActiveSubIndex(null); setIsMenuOpen(false);}}>
-                                <div className="w-14 h-14 overflow-hidden rounded-[1.2rem] shadow-md shadow-amber-200/50 border-4 border-white group-hover:scale-105 group-hover:rotate-3 transition-transform duration-300">
+                                <div className="w-14 h-14 shrink-0 overflow-hidden rounded-[1.2rem] shadow-md shadow-amber-200/50 border-4 border-white group-hover:scale-105 group-hover:rotate-3 transition-transform duration-300">
                                     <img src={ipImageUrl} alt="Logo" className="w-full h-full object-cover" />
                                 </div>
-                                <div className="flex flex-col">
-                                    <h2 className="text-xl font-extrabold tracking-tight text-emerald-900 leading-none">歐大選擇權</h2>
-                                    <span className="text-[11px] font-bold text-amber-500 uppercase tracking-widest mt-1.5 flex items-center gap-1"><Icons.Leaf/> 魔法教室</span>
+                                <div className="flex flex-col min-w-0">
+                                    <h2 className="text-xl font-extrabold tracking-tight text-emerald-900 leading-none truncate">歐大選擇權教室</h2>
+                                    <span className="text-[11px] font-bold text-amber-500 uppercase tracking-widest mt-1.5 flex items-center gap-1"><Icons.Leaf/> JOPTION ACADEMY</span>
                                 </div>
                             </div>
 
@@ -240,9 +240,9 @@
                     {/* Main Workspace */}
                     <main className="flex-1 flex flex-col h-[100dvh] relative min-w-0 overflow-hidden bg-[#f7f9f4]">
                         <header className="md:hidden flex items-center justify-between px-6 py-4 bg-[#fffcf5] border-b-2 border-stone-200 shrink-0 z-40 w-full shadow-sm">
-                            <div className="flex items-center gap-3" onClick={() => {setActiveChapterId('home'); setActiveSubIndex(null);}}>
-                                <img src={ipImageUrl} alt="Logo" className="w-10 h-10 rounded-xl object-cover shadow-sm border-2 border-white" />
-                                <span className="font-extrabold text-emerald-900 text-lg tracking-tight">歐大選擇權</span>
+                            <div className="flex items-center gap-3 overflow-hidden" onClick={() => {setActiveChapterId('home'); setActiveSubIndex(null);}}>
+                                <img src={ipImageUrl} alt="Logo" className="w-10 h-10 shrink-0 rounded-xl object-cover shadow-sm border-2 border-white" />
+                                <span className="font-extrabold text-emerald-900 text-lg tracking-tight truncate">歐大選擇權教室</span>
                             </div>
                             <button onClick={() => setIsMenuOpen(!isMenuOpen)} className="p-2 text-stone-600 bg-stone-100 rounded-xl transition-colors active:scale-95">
                                 {isMenuOpen ? <Icons.X /> : <Icons.Menu />}
@@ -267,7 +267,7 @@
                                             </p>
                                             <div className="pt-4 pb-4">
                                                 <button onClick={() => setActiveChapterId('ch1')} className="bg-amber-400 text-amber-950 px-10 py-5 rounded-[2rem] font-black shadow-[0_8px_0_#b45309] hover:translate-y-1 hover:shadow-[0_4px_0_#b45309] active:translate-y-2 transition-all flex items-center justify-center gap-3 text-xl mx-auto lg:mx-0 group">
-                                                    進入魔法森林
+                                                    進入 歐大選擇權教室
                                                 </button>
                                             </div>
                                         </div>
